Добавили в header блок: с главной картинкой (Hero); кнопкой «Скачать приложение»; иконки (внешние ссылки на маркеты)

--- a/index.html
+++ b/index.html
@@ -50,8 +50,41 @@
             </div>
           </nav>
       </div>
-
+      <div class="hero page-header__btm">
+          <div class="hero__img-holder page-header__btm-img">
+            <img class="hero__img-action" src="http://placehold.it/320x462" alt="iPhone in hand, app showcase">
+          </div>
+          <div class="hero__action page-header__btm-action">
+            <div class="btn btn--download hero__action-btn" aria-label="download-app-button">
+              <a class="btn__link subhead-mid" href="https://www.apple.com/lae/itunes/working-itunes/market/" rel="noopener" rel="nofollow">Скачать приложение</a>
+            </div>
+            <div class="apps hero__action-app">
+              <!-- svg app icons -->
+              <ul class="apps__list">
+                <li class="apps__item">
+                  <a class="apps__item-link" href="https://www.apple.com/lae/itunes/working-itunes/market/" rel="noopener" rel="nofollow">
+                    <img class="apps__item-img" src="http://placehold.it/47x56" width="47" height="56" alt="Apple icon" title="Apple icon">
+                  </a>
+                </li>
+                <li class="apps__item">
+                  <a class="apps__item-link" href="https://play.google.com/store/apps/" rel="noopener" rel="nofollow">
+                    <img class="apps__item-img" src="http://placehold.it/43x47" width="43" height="47" alt="Android icon" title="Android icon">
+                  </a>
+                </li>
+                <li class="apps__item">
+                  <a class="apps__item-link" href="https://www.microsoft.com/ru-RU/store/apps/windows-phone" rel="noopener" rel="nofollow">
+                    <img class="apps__item-img" src="http://placehold.it/44x41" width="44" height="41" alt="Windows icon" title="Windows icon">
+                  </a>
+                </li>
+              </ul>
+              <div class="apps__desc">
+                <p class="apps-desc__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
   </header>
+
 </body>
 </html>
