Внесли в main блок «Характеристики приложения»

--- a/index.html
+++ b/index.html
@@ -85,6 +85,38 @@
       </div>
     </div>
   </header>
+  <main class="homepage-main">
+    <!-- Section 1 -->
+    <section class="features">
+      <div class="features__inner inner">
+          <div class="appfeat-heading features__heading features__heading--section-edge">
+            <div class="appfeat-heading__holder">
+              <h2 class="appfeat-heading__quest subhead-top">Устали от серости мегаполиса?</h2>
+              <h2 class="appfeat-heading__exclam subhead-top">Нам есть, что вам предложить!</h2>
+            </div>
+          </div>
+          <div class="appfeat-desc features__desc">
+            <ul class="appfeat-desc__list">
+              <li class="appfeat-desc__item">
+                <h3 class="appfeat-desc__heading subhead-mid">Поднимает настроение</h3>
+                <p class="appfeat-desc__text body-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+              </li>
+              <li class="appfeat-desc__item">
+                <h3 class="appfeat-desc__heading subhead-mid">Меняет мир вокруг</h3>
+                <p class="appfeat-desc__text body-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              </li>
+              <li class="appfeat-desc__item">
+                <h3 class="appfeat-desc__heading subhead-mid">Заводит новых друзей</h3>
+                <p class="appfeat-desc__text body-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+              </li>
+            </ul>
+          </div>
+          <div class="appfeat-img features__img">
+            <img class="appfeat-img__action" src="http://placehold.it/157x330" alt="iPhone screen, app showcase" >
+          </div>
+        </div>
+    </section>
 
+  </main>
 </body>
 </html>
