Добавили в main блок «Отзывы»

--- a/index.html
+++ b/index.html
@@ -116,6 +116,43 @@
           </div>
         </div>
     </section>
+    <!-- Section 2 App-Review -->
+    <section class="app-review app-review--section-edge">
+      <div class="app-review__inner inner">
+        <!-- Accessibility: hidden heading -->
+        <h2 class="sr-only visually-hidden hidden-heading">Отзывы пользователей приложения</h2>
+        <div class="review app-review__users">
+          <ul class="review__list">
+            <li class="review__item">
+              <h3 class="review__item-heading subhead-mid">Николай Петров</h3>
+              <p class="review__item-text body-text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
+            </li>
+            <li class="review__item">
+              <h3 class="review__item-heading subhead-mid">Николай Петров</h3>
+              <p class="review__item-text body-text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
+            </li>
+            <li class="review__item">
+              <h3 class="review__item-heading subhead-mid">Николай Петров</h3>
+              <p class="review__item-text body-text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
+            </li>
+          </ul>
+        </div>
+        <!-- Slider -->
+        <div class="slider-rev app-review__sl" aria-label="review-slider">
+          <ul class="slider-rev__list">
+            <li class="slider-rev__item active">
+              <a class="slider-rev__link slider-rev__link--active" href="#""></a>
+            </li>
+            <li class="slider-rev__item">
+              <a class="slider-rev__link slider-rev__link--active" href="#""></a>
+            </li>
+            <li class="slider-rev__item">
+              <a class="slider-rev__link slider-rev__link--active" href="#""></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
   </main>
 </body>
