Внесли в блок plans (тарифы) скрытый h2 и таблицу с тарифами

--- a/index.html
+++ b/index.html
@@ -153,6 +153,61 @@
         </div>
       </div>
     </section>
+    <!-- Section 3 Plans-->
+    <section class="plans">
+      <div class="plans__inner inner">
+        <!-- Accessibility: hidden heading -->
+        <h2 class="sr-only visually-hidden hidden-heading">Планы и цены приложения</h2>
+        <div class="plans__holder">
+          <table class="tbl plans__tbl-content">
+            <thead class="tbl__header">
+              <tr class="tbl__header-row subhead-mid">
+                <th class="tbl__header-item" scope="col">
+                  База
+                </th>
+                <th class="tbl__header-item" scope="col">
+                  Стандарт
+                </th>
+                <th class="tbl__header-item" scope="col">
+                  Анлим
+                </th>
+              </tr>
+              <tr class="tbl__header-row subhead-top">
+                <th class="tbl__header-item" scope="col">
+                  1,99 usd
+                </th>
+                <th class="tbl__header-item" scope="col">
+                  3,99 usd
+                </th>
+                <th class="tbl__header-item" scope="col">
+                  9,99 usd
+                </th>
+              </tr>
+            </thead>
+            <tbody class="tbl__body">
+              <tr class="tbl__row body-text">
+                <!-- add svg icons to ::after pseudo-element? -->
+                <td class="tbl__row-item" aria-label="included">Розовый фильтр</td>
+                <td class="tbl__row-item" aria-label="not-included">Смайлики</td>
+                <td class="tbl__row-item" aria-label="not-included">Комментарии</td>
+              </tr>
+              <tr class="tbl__row  body-text">
+                <!-- add svg icons to ::after pseudo-element?-->
+                <td class="tbl__row-item" aria-label="included">Розовый фильтр</td>
+                <td class="tbl__row-item" aria-label="included">Смайлики</td>
+                <td class="tbl__row-item" aria-label="not-included">Комментарии</td>
+              </tr>
+              <tr class="tbl__row  body-text">
+                <!-- add svg icons to ::after pseudo-element? -->
+                <td class="tbl__row-item" aria-label="included">Розовый фильтр</td>
+                <td class="tbl__row-item" aria-label="included">Смайлики</td>
+                <td class="tbl__row-item" aria-label="included">Комментарии</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+    </section>
 
   </main>
 </body>
