Внесли в блок «Тарифы» блок slider

--- a/index.html
+++ b/index.html
@@ -206,9 +206,24 @@
             </tbody>
           </table>
         </div>
-
+        <!-- Slider -->
+        <div class="slider-pl plans__sl" aria-label="plans-slider">
+          <!-- slider bullets and active bullets -->
+          <ul class="slider-pl__list">
+            <li class="slider-pl__item  active">
+              <a class="slider-pl__link slider-pl__link--active" href="#""></a>
+            </li>
+            <li class="slider-pl__item">
+              <a class="slider-pl__link slider-pl__link--active" href="#""></a>
+            </li>
+            <li class="slider-pl__item">
+              <a class="slider-pl__link slider-pl__link--active" href="#""></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
-
   </main>
+
 </body>
 </html>
