Добавили в футер блок с контактами и контейнер для yandex карты

--- a/index.html
+++ b/index.html
@@ -224,6 +224,38 @@
       </div>
     </section>
   </main>
+  <footer class="homepage-footer">
+    <div class="homepage-footer__inner inner">
+      <div class="contact-us contact-us--section-edge homepage-footer__contact-us">
+        <div class="contact-us__heading-holder">
+          <!-- Add Mix title/heading style? -->
+          <h2 class="contact-us__heading-quest title subhead-top">Остались вопросы?</h2>
+          <h2 class="contact-us__heading-exclam title subhead-top">Свяжитесь с нами!</h2>
+        </div>
+        <div class="contact-us__info-holder">
+          <div class="contact-us__phone">
+            <h3 class="contact-us__heading subhead-mid">Звоните:</h3>
+            <span class="contact-us__info">
+              <a class="contact-us__info-phone subhead-top" href="tel:+78125556666" title="Звоните">+7(812)555-66-66</a>
+            </span>
+          </div>
+          <div class="contact-us__email">
+            <h3 class="contact-us__heading subhead-mid">Пишите:</h3>
+            <span class="contact-us__info">
+              <a class="contact-us__info-email subhead-top" href="mailto:mail@htmlacademy.ru" >mail@htmlacademy.ru</a>
+            </span>
+          </div>
+          <div class="contact-us__address">
+            <h3 class="contact-us__heading subhead-mid">Приезжайте в гости:</h3>
+            <span class="contact-us__info-address subhead-top">ул. Большая Конюшенная, 19/8</span>
+          </div>
+        </div>
 
+      </div>
+      <div class="map-container yandex-map homepage-footer__map-holder" id="map">
+        <!-- yandex map -->
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
