Внесли в header, блок с основным заголовком (h2)

--- a/form.html
+++ b/form.html
@@ -54,8 +54,13 @@
             </div>
           </nav>
         </div>
-
+        <div class="intro-contest page-header__btm">
+          <div class="intro-contest__message page-header__btm-message">
+            <h2 class="intro-contest__heading subhead-top">Конкурс на самое безбашенное путешествие с Пинк</h2>
+          </div>
+        </div>
       </div>
     </header>
+
   </body>
 </html>
