Добавили в блок contestform, скрытый заголовок и описание к нему

--- a/form.html
+++ b/form.html
@@ -61,6 +61,18 @@
         </div>
       </div>
     </header>
+    <!-- Accessibility skip-to-main-->
+    <main class="main-content" id="skip-to-main" tabindex="-1">
+      <section class="contestform">
+        <div class="contestform__inner inner">
+          <!-- Accessibility: hidden heading -->
+          <h2 class="sr-only visually-hidden">Заполните форму</h1>
+          <div class="contest-message contestform__message">
+            <p class="contest-message__text body-text">Поделитесь своей историей и получите шанс выиграть ценный приз &mdash; 1000 миль на вашу бонусную карту!</p>
+          </div>
 
+        </div>
+      </section>
+    </main>
   </body>
 </html>
