Внесли группу чекбоксов (достижения в путешествии)

--- a/form.html
+++ b/form.html
@@ -98,6 +98,63 @@
                   </label>
                 </div>
               </fieldset>
+              <!-- Accomplishements Info Block 2 -->
+              <fieldset class="form__accomp-holder">
+                <!-- Accessibility: hidden legend -->
+                <legend class="form__accomp-legend sr-only visually-hidden">Отметьте ваши безбашенные достижения в путешествии</legend>
+                <!-- Accessibility: heading is invisible to sr, because legend has an accessible alternative -->
+                <div class="form__accomp-message">
+                  <h3 class="form__accomp-heading body-text" aria-hidden="true">Ваши безбашенные достижения в путешествии</h3>
+                </div>
+                <div class="form__check">
+                  <label class="form__check-checkbox">
+                    <input class="form__check-checkinput" type="checkbox" name="accomp" value="selfie">
+                    <!-- custom checkbox -->
+                    <span class="form__check-custom"></span>
+                    <span class="form__check-label form-label">Сделал селфи с акулой</span>
+                  </label>
+                </div>
+                <div class="form__check">
+                  <label class="form__check-checkbox">
+                    <input class="form__check-checkinput" type="checkbox" name="accomp" value="sunburn">
+                    <!-- custom checkbox -->
+                    <span class="form__check-custom"></span>
+                    <span class="form__check-label form-label">Обгорел на пляже</span>
+                  </label>
+                </div>
+                <div class="form__check">
+                  <label class="form__check-checkbox">
+                    <input class="form__check-checkinput" type="checkbox" name="accomp" value="chuck">
+                    <!-- custom checkbox -->
+                    <span class="form__check-custom"></span>
+                    <span class="form__check-label form-label">Видел Чака Норриса</span>
+                  </label>
+                </div>
+                <div class="form__check">
+                  <label class="form__check-checkbox">
+                    <input class="form__check-checkinput" type="checkbox" name="accomp" value="shopping">
+                    <!-- custom checkbox -->
+                    <span class="form__check-custom"></span>
+                    <span class="form__check-label form-label">Накупил сувениров</span>
+                  </label>
+                </div>
+                <div class="form__check">
+                  <label class="form__check-checkbox">
+                    <input class="form__check-checkinput" type="checkbox" name="accomp" value="holdup">
+                    <!-- custom checkbox -->
+                    <span class="form__check-custom"></span>
+                    <span class="form__check-label form-label">Удержал башню</span>
+                  </label>
+                </div>
+                <div class="form__check">
+                  <label class="form__check-checkbox">
+                    <input class="form__check-checkinput" type="checkbox" name="accomp" value="raid">
+                    <!-- custom checkbox -->
+                    <span class="form__check-custom"></span>
+                    <span class="form__check-label form-label">Разгромил отель</span>
+                  </label>
+                </div>
+              </fieldset>
 
             </form>
           </div>
