Добавили группу полей для контактной информации (тел. и почта)

--- a/form.html
+++ b/form.html
@@ -155,6 +155,24 @@
                   </label>
                 </div>
               </fieldset>
+              <!-- Phone & email info Block 3 -->
+              <fieldset class="form__contact-holder">
+                <!-- Accessibility: hidden legend -->
+                <legend class="form__contact-legend sr-only visually-hidden">Заполните контактную информацию</legend>
+                <div class="form__group">
+                  <label class="form__group-field">
+                    <span class="form__group-label body-text">Номер телефона</span>
+                    <input class="form__group-formcontrol form-label" type="tel" name="phone" placeholder="Номер, пожалуйста" value="">
+                  </label>
+                </div>
+                <div class="form__group">
+                  <!-- Required field -->
+                  <label class="form__group-field">
+                    <span class="form__group-label body-text">Адрес почты</span>
+                    <input class="form__group-formcontrol form-label" type="email" name="email" required placeholder="Введите почту &#10033;" value="">
+                  </label>
+                </div>
+              </fieldset>
 
             </form>
           </div>
