Внесли группу radiobuttons

--- a/form.html
+++ b/form.html
@@ -173,6 +173,39 @@
                   </label>
                 </div>
               </fieldset>
+              <!-- App Info Block 4 -->
+              <fieldset class="form__app-holder">
+                <!-- Accessibility: hidden legend -->
+                <legend class="form__app-legend sr-only visually-hidden">Отметьте приложение, которое вы использовали в путешествовии</legend>
+                <!-- Accessibility: heading is invisible to sr, because legend has an accessible alternative -->
+                <div class="form__app-message">
+                  <h3 class="form__app-heading body-text" aria-hidden="true">С каким приложением путешествовали?</h3>
+                </div>
+                <div class="form__radio">
+                  <label class="form__radio-radiobtn">
+                    <input class="form__radio-radioinput" type="radio" name="app" value="ios">
+                    <!-- custom radio -->
+                    <span class="form__radio-custom"></span>
+                    <span class="form__radio-label form-label">Pink для iOS</span>
+                  </label>
+                </div>
+                <div class="form__radio">
+                  <label class="form__radio-radiobtn">
+                    <input class="form__radio-radioinput" type="radio" name="app" value="android">
+                    <!-- custom radio -->
+                    <span class="form__radio-custom"></span>
+                    <span class="form__radio-label form-label">Pink на Android</span>
+                  </label>
+                </div>
+                <div class="form__radio">
+                  <label class="form__radio-radiobtn">
+                    <input class="form__radio-radioinput" type="radio" name="app" value="wind-phone">
+                    <!-- custom radio -->
+                    <span class="form__radio-custom"></span>
+                    <span class="form__radio-label form-label">Windows Phone</span>
+                  </label>
+                </div>
+              </fieldset>
 
             </form>
           </div>
