Добавили в форму поле для описания (textarea)

--- a/form.html
+++ b/form.html
@@ -206,6 +206,20 @@
                   </label>
                 </div>
               </fieldset>
+              <!-- Describe Info Block 5 -->
+              <fieldset class="form__descr-holder">
+                <!-- Accessibility: hidden legend -->
+                <legend class="form__descr-legend sr-only visually-hidden">Опишите свои эмоции от путешествия</legend>
+                <!-- Accessibility: heading is invisible to sr, because legend has an accessible alternative -->
+                <div class="form__descr-message">
+                  <h3 class="form__descr-heading body-text" aria-hidden="true">Опишите свои эмоции</h3>
+                </div>
+                <div class="form__textarea">
+                  <label class="form__textarea-txt">
+                    <textarea class="form__textarea-formcontrol form-label" cols="20" rows="10" name="descr" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+                  </label>
+                </div>
+              </fieldset>
 
             </form>
           </div>
