Внесли в форму блоки с кнопкой и пометкой к форме

--- a/form.html
+++ b/form.html
@@ -220,8 +220,16 @@
                   </label>
                 </div>
               </fieldset>
-
+              <!-- Submit btn -->
+              <div class="form__btn-holder">
+                <input class="btn btn--submit form__btn-submit" type="submit" value="Отправить форму">
+              </div>
+              <!-- Required fields message -->
+              <div class="form__reqfields-holder">
+                <p class="form__reqfields-message body-text">&#10033; &mdash; Обязательные поля</p>
+              </div>
             </form>
+
           </div>
         </div>
       </section>
