Добавили в футер блоки с лого и иконки соц. сетей (внешние ссылки)

--- a/form.html
+++ b/form.html
@@ -229,10 +229,38 @@
                 <p class="form__reqfields-message body-text">&#10033; &mdash; Обязательные поля</p>
               </div>
             </form>
-
           </div>
         </div>
       </section>
     </main>
+    <footer class="page-footer">
+      <div class="page-footer__inner inner">
+        <!-- footer svg logo -->
+        <div class="logo-footer page-footer__logo">
+          <img class="logo-footer__img" src="http://placehold.it/147x40" width="147" height="40" alt="Pink footer logo">
+        </div>
+        <div class="social page-footer__social">
+          <!-- footer svg social icons-list -->
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social_link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Наш Twitter">
+                <!-- <svg class="like-link__icon" aria-hidden="true"><use xlink:href="#"></svg> -->
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Наш Facebook">
+                <!-- <svg class="like-link__icon" aria-hidden="true"><use xlink:href="#"></svg> -->
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Наш канал на YouTube">
+                <!-- <svg class="like-link__icon" aria-hidden="true"><use xlink:href="#"></svg> -->
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </footer>
   </body>
 </html>
