Добавили в футер блок с инфо копирайта

--- a/form.html
+++ b/form.html
@@ -259,7 +259,15 @@
             </li>
           </ul>
         </div>
-
+        <div class="copyright page-footer__copyright">
+          <span class="copyright__text body-text">Разработано</span>
+          <span class="copyright__logo-link">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" rel="noopener" rel="nofollow" title="HTML Academy logo">
+              <!-- svg logo -->
+              <img class="copyright__logo" src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy logo">
+            </a>
+          </span>
+        </div>
       </div>
     </footer>
   </body>
