--- a/form.html
+++ b/form.html
@@ -270,5 +270,29 @@
         </div>
       </div>
     </footer>
+    <!-- Modal success -->
+    <div class="form__modal-dialog" aria-label="modal-dialog">
+      <div class="success-popup form__modal-success" aria-modal="true">
+        <div class="success-popup__message">
+          <h3 class="success-popup__heading subhead-mid">Ваша заявка отправлена</h3>
+          <p class="success-popup__text body-text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+        </div>
+        <div class="success-popup__btn success-popup__btn--bottom">
+          <button class="btn btn--modal-ok subhead-mid" type="button">Закрыть окно</button>
+        </div>
+      </div>
+    </div>
+    <!-- Modal error -->
+    <div class="form__modal-dialog" aria-label="modal-dialog">
+      <div class="error-popup form__modal-error" aria-modal="true">
+        <div class="error-popup__message">
+          <h3 class="error-popup__heading subhead-mid">Что-то пошло не так!</h3>
+          <p class="error-popup__text body-text">Проверьте поля, выделенные красным,скорее всего вы забыли их заполнить.</p>
+        </div>
+        <div class="error-popup__btn error-popup__btn--bottom">
+          <button class="btn btn--modal-close subhead-mid" type="button">OK</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
