Добавили в header скрытый заголовок h1, skip to main и блок logo

--- a/photo.html
+++ b/photo.html
@@ -7,6 +7,26 @@
     <meta name="description" content="Приложение для всех. Поднимает настроение. Меняет мир вокруг.">
   </head>
   <body>
+    <!-- Add to header bg-color + bg-img -->
+    <header class="page-header">
+      <!-- Accessibility: hidden heading -->
+      <h1 class="sr-only visually-hidden">Поднимите себе настроение с приложением PINK</h1>
+      <div class="page-header__inner inner">
+        <!-- Accessibility: jump/skip to main contentent link -->
+        <div class="skip-to-main">
+          <a class="skip-to-main__link sr-shortcut" href="#skip-to-main">Skip to main content</a>
+        </div>
+        <div class="page-header__top">
+          <div class="logo page-header__logo">
+            <a class="logo__link" href="index.html">
+              <!-- svg logo -->
+              <img class="logo__img" src="http://placehold.it/75x22" width="75" height="22" alt="Pink logo">
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </header>
 
   </body>
 </html>
