--- a/photo.html
+++ b/photo.html
@@ -53,7 +53,12 @@
             </div>
           </nav>
         </div>
-
+        <div class="intro-share page-header__btm">
+          <!-- Accessibility: heading is invisible to sr, because section photofeed has an accessible alternative -->
+          <div class="intro-share__message page-header__btm-message">
+            <h2 class="intro-share__heading subhead-top" aria-hidden="true">Фотографии пользователей</h2>
+          </div>
+        </div>
       </div>
     </header>
 
