Внесли в блок photofeed скрытый заголовок (h2) и описание к нему

--- a/photo.html
+++ b/photo.html
@@ -61,6 +61,20 @@
         </div>
       </div>
     </header>
+    <!-- Accessibility skip-to-main-->
+    <main class="main-content" id="skip-to-main" tabindex="-1">
+      <!-- Section 1 -->
+      <section class="photofeed">
+        <!-- Accessibility: hidden heading -->
+        <h2 class="sr-only visually-hidden">Лента фотографий пользователей приложения PINK</h2>
+        <div class="feed-message photofeed__message">
+          <div class="feed-message__inner inner">
+            <p class="feed-message__exclam body-text">Взгляните на фотографии, которые выкладывают пользователи!</p>
+            <p class="feed-message__quest body-text">Видите, как не хватает ваших?</p>
+          </div>
+        </div>
 
+      </section>
+    </main>
   </body>
 </html>
