Внесли в раздел «Отредактировать и разместить фотографию» скрытый заголовок и призыв к действию

--- a/photo.html
+++ b/photo.html
@@ -287,7 +287,18 @@
           </div>
         </div>
       </section>
+      <!-- Section 3 Upload Photo-->
+      <section class="upload-ph">
+        <div class="upload-ph__inner inner">
+          <!-- Accessibility: hidden heading -->
+          <h2 class="sr-only visually-hidden">Отредакторовать и разместить фотографию</h2>
+          <div class="upload-ph__message">
+            <p class="upload-ph__message-exclam body-text">Затмите их!</p>
+            <p class="upload-ph__message-text body-text">Выкладывайте все, что накопилось в телефоне!</p>
+          </div>
 
+        </div>
+      </section>
     </main>
   </body>
 </html>
