Внесли в футер блок с лого

--- a/photo.html
+++ b/photo.html
@@ -350,6 +350,14 @@
         </div>
       </section>
     </main>
+    <footer class="page-footer">
+      <div class="page-footer__inner inner">
+        <!-- footer svg logo -->
+        <div class="logo-footer page-footer__logo">
+          <img class="logo-footer__img" src="http://placehold.it/147x40" width="147" height="40" alt="Pink footer logo">
+        </div>
 
+      </div>
+    </footer>
   </body>
 </html>
