Внесли в футер блок с иконками соц. сетей (внешние ссылки)

--- a/photo.html
+++ b/photo.html
@@ -356,6 +356,32 @@
         <div class="logo-footer page-footer__logo">
           <img class="logo-footer__img" src="http://placehold.it/147x40" width="147" height="40" alt="Pink footer logo">
         </div>
+        <div class="social page-footer__social">
+          <!-- footer svg social icons-list -->
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Наш Twitter">
+                <svg class="social__icon" aria-hidden="true">
+                  <use xlink:href="#">
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Facebook">
+                <svg class="social__icon" aria-hidden="true">
+                  <use xlink:href="#">
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Наш канал на YouTube">
+                <svg class="social__icon" aria-hidden="true">
+                  <use xlink:href="#">
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
 
       </div>
     </footer>
