--- a/form.html
+++ b/form.html
@@ -244,17 +244,23 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social_link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Наш Twitter">
-                <!-- <svg class="like-link__icon" aria-hidden="true"><use xlink:href="#"></svg> -->
+                <svg class="social__icon" aria-hidden="true">
+                  <use xlink:href="#">
+                </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Наш Facebook">
-                <!-- <svg class="like-link__icon" aria-hidden="true"><use xlink:href="#"></svg> -->
+                <svg class="social__icon" aria-hidden="true">
+                  <use xlink:href="#">
+                </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link" href="#" target="_blank" rel="noopener" rel="nofollow" title="Наш канал на YouTube">
-                <!-- <svg class="like-link__icon" aria-hidden="true"><use xlink:href="#"></svg> -->
+                 <svg class="social__icon" aria-hidden="true">
+                  <use xlink:href="#">
+                </svg>
               </a>
             </li>
           </ul>
